// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Videos runs correctly on empty state 1`] = `
<h1>
  No videos found.
</h1>
`;

exports[`Videos runs correctly with 1 item 1`] = `
<div>
  <h3>
    Udemy
  </h3>
</div>
`;

exports[`Videos runs correctly with multiple item 1`] = `
<div>
  <h3>
    Udemy
  </h3>
  <h3>
    Youtube
  </h3>
  <h3>
    Vimeo
  </h3>
  <h3>
    Tutorial
  </h3>
</div>
`;
